---
source: integ-tests/tests/parser.rs
expression: error
---
error[wanted]: 
  ┌─ empty_pipe:1:3
  │
1 │ ""|=3
  │   ^ expected an equals
